# docker-pytorch-vision

./: .gitignore  Dockerfile.base  Dockerfile.conda  Dockerfile.pkgs
torch/: Dockerfile  README.md  pyproject.toml
